# du.py

./: README.md  setup.cfg  setup.py  test.py
.github./workflows/: publish-to-pypi.yml
.github/workflows/: main.yml  python-publish.yml
dudb/: __init__.py
src/dudb/: __init__.py
