[metadata]
name = du.py
version = alpha-1
author = Stylix58
author_email = lateman-jpeg@outlook.fr
description = A API wrapper for Dangerous Users Data Base
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Stylix58/du.py
project_urls =
    Bug Tracker = https://github.com/Stylix58/du.py/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src